--- a/assets/style.css
+++ b/assets/style.css
@@ -28,3 +28,20 @@ aside {
   display: flex;
   justify-content: center;
 }
+.grid {
+  display: grid;
+  grid-template: 1fr 1fr 1fr 1fr 1fr 1fr 1fr / 1fr;
+
+}
+.subgrid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+}
+
+img {
+  height: 200px;
+  width: 200px;
+}
