--- a/assets/style.css
+++ b/assets/style.css
@@ -5,18 +5,18 @@
 }
 
 body {
-
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
   background-color: #A0CCF3
 }
 .superdiv {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 100vphw
-  width: 100vpw;
   border-style: solid;
   border-color: orange;
+  height: 100%;
 }
 .subdiv {
   display: flex;
@@ -45,6 +45,8 @@ aside {
   flex-direction: column;
   border-style: solid;
   border-color: purple;
+  height: 100vh;
+
 
 }
 .subgrid {
@@ -59,8 +61,8 @@ aside {
 }
 
 img {
-  height: 200px;
-  width: 200px;
+  max-height: 200px;
+  max-width: 200px;
 }
 nav {
   display: flex;
@@ -75,24 +77,26 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    height: 100vh;
+    align-items: stretch;
 
   }
   aside {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 50px;
-    height: 100vph;
+    width: 80px;
+
   }
 
   .grid {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    justify-content: space-between ;
+    justify-content: space-around;
+    flex-wrap: wrap;
   }
   nav {
     flex-direction: column;
     align-items: flex-start;
-    height: 100vph;
+    height: 150px;
   }
