--- a/assets/style.css
+++ b/assets/style.css
@@ -3,11 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html {
+  min-height: 100%;
+  height: stretch;
+}
 body {
   display: flex;
+  min-height: 100%;
+  height: 100%;
+  width: 100%;
   flex-direction: column;
-  align-content: stretch;
   background-color: #A0CCF3
 }
 .superdiv {
@@ -16,13 +21,15 @@ body {
   align-items: center;
   border-style: solid;
   border-color: orange;
-  height: 100%;
+  min-height: 100%;
+  height: stretch;
 }
 .subdiv {
   display: flex;
   flex-direction: column;
   border-style: solid;
-  border-color: black;
+  align-items: center;
+
 }
 
 footer {
@@ -43,9 +50,10 @@ aside {
 .grid {
   display: flex;
   flex-direction: column;
+  min-height: 100%;
+  height: 100%;
   border-style: solid;
   border-color: purple;
-  height: 100vh;
 
 
 }
@@ -54,10 +62,10 @@ aside {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-style: solid;
-  border-color: black;
   width: 300px;
   height: 300px;
+  border-style: solid;
+  border-color: green;
 }
 
 img {
@@ -67,8 +75,8 @@ img {
 nav {
   display: flex;
   justify-content: space-between;
-  border-style: solid;
-  border-color: red;
+  width: 70vw;
+
 
 }
 
@@ -77,7 +85,8 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    height: 100vh;
+    min-height: 100%;
+    height: stretch;
     align-items: stretch;
 
   }
@@ -85,18 +94,31 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 80px;
+    width: 100px;
+    min-height: 100%;
+    height: stretch;
 
   }
 
   .grid {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
+    min-height: 100%;
+    height: stretch;
+    width: 100%;
+  }
+  .subgrid {
+    margin-left: 40px;
+    margin-right: 40px;
   }
   nav {
     flex-direction: column;
     align-items: flex-start;
     height: 150px;
+  }
+  .disabled {
+    color: black;
+    text-decoration: none;
   }
