--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,15 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+
 }
 html {
-  min-height: 100%;
+  min-height: 100% !important;
   height: stretch;
 }
 body {
   display: flex;
-  min-height: 100%;
+  min-height: 100% !important;
   height: 100%;
   width: 100%;
   flex-direction: column;
@@ -80,12 +80,15 @@ nav {
 
 }
 
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 550px) {
+  .subdiv {
+    height: 100vh;
+  }
   .superdiv {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    min-height: 100%;
+    min-height: 100% !important;
     height: stretch;
     align-items: stretch;
 
@@ -122,3 +125,11 @@ nav {
     color: black;
     text-decoration: none;
   }
+@media only screen and (min-width: 900px) {
+  aside {
+    height: 130vh;
+  }
+  superdiv {
+    height: 100vh;
+  }
+}
