--- a/assets/style.css
+++ b/assets/style.css
@@ -19,49 +19,71 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-style: solid;
-  border-color: orange;
+
   min-height: 100%;
   height: stretch;
 }
 .subdiv {
   display: flex;
   flex-direction: column;
-  border-style: solid;
+
   align-items: center;
 
 }
 
 footer {
-  background-color: gray;
+  background-color: #F9DBF1;
+  height: 50px;
+  border-style: solid;
+  border-color: white;
 }
 
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #D0DFEC;
+  border-bottom: 1px solid;
+  border-color: black;
 }
+
+address {
+    margin: 5px;
+  }
+
+address a {
+  margin: 2px;
+}
+
 h1 {
   font-size: 4em;
   font-family: Arial, Helvetica, sans-serif;
 }
 .desc {
   font-family: Verdana, Geneva, sans-serif;
+  background-color: white;
+  text-align: center;
+  padding: 3px;
+  border-radius: 25px;
+  border-style: solid;
+  border-color: gray;
 }
 aside {
   display: flex;
   justify-content: center;
+  width: 100%;
   border-style: solid;
   border-color: white;
-  background-color: gray;
+  background-color: #B7B9BB;
+  padding: 3px;
+
 }
 .grid {
   display: flex;
   flex-direction: column;
   min-height: 100%;
   height: 100%;
-  border-style: solid;
-  border-color: purple;
+
 
 
 }
@@ -72,13 +94,20 @@ aside {
   align-items: center;
   width: 300px;
   height: 300px;
-  border-style: solid;
-  border-color: green;
+
+  padding: 5px;
 }
 
 img {
-  max-height: 200px;
-  max-width: 200px;
+  max-height: 250px;
+  max-width: 300px;
+  margin-bottom: 15px;
+}
+.project: {
+  max-height: 300px;
+  max-width: 400px;
+  height: 300px;
+  width: 400px;
 }
 nav {
   display: flex;
@@ -87,7 +116,10 @@ nav {
 }
 .bigP {
   font-size: 2.3em;
-  font-family: Courier, monospace
+  font-family: Courier, monospace;
+  padding: 3px;
+  text-align: center;
+
 }
 @media only screen and (min-width: 550px) {
   .subdiv {
@@ -136,7 +168,7 @@ nav {
   }
 @media only screen and (min-width: 900px) {
   aside {
-    height: 130vh;
+    height: 155vh;
   }
   superdiv {
     height: 100vh;
