--- a/assets/style.css
+++ b/assets/style.css
@@ -40,13 +40,31 @@ footer {
 
 header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
   background-color: #D0DFEC;
   border-bottom: 1px solid;
   border-color: black;
 }
-
+.midDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.accentDiv1 {
+  background-color: #4958AB;
+  width: 112px;
+  height: stretch;
+}
+.accentDiv2 {
+  background-color: #4958AB;
+  width: 112px;
+  height: stretch;
+}
+.random {
+  width: 130px;
+  border-radius: 15px;
+  padding: 5px;
+}
 address {
     margin: 5px;
   }
@@ -84,8 +102,6 @@ aside {
   min-height: 100%;
   height: 100%;
 
-
-
 }
 .subgrid {
   margin-top: 20px;
@@ -97,7 +113,11 @@ aside {
 
   padding: 5px;
 }
-
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 img {
   max-height: 250px;
   max-width: 300px;
@@ -121,6 +141,13 @@ nav {
   text-align: center;
 
 }
+.bigPic {
+  max-width: 400px;
+  max-height: 500px;
+  border-radius: 25px;
+  border-style: solid;
+  border-color: white;
+}
 @media only screen and (min-width: 550px) {
   .subdiv {
     height: 100vh;
@@ -140,7 +167,7 @@ nav {
     justify-content: flex-start;
     width: 100px;
     min-height: 100%;
-    height: stretch;
+    height: 130vh;
 
   }
 
